--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/YearsDTO.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/YearsDTO.cshtml
@@ -1,7 +1,5 @@
-﻿@model MVC.Presentacion.Models.Historico.HistoricoVentasConsulta
-@Html.HiddenFor(x => x.Years)
+﻿@model MVC.Presentacion.Models.Historico.YearsDTO
+    @Html.HiddenFor(m => m.Year)
+<li style="list-style:none">@Html.CheckBoxFor(x => x.Seleccionar, new { @style = "width: 20px; height: 20px;" }) @Model.Year</li>
 
-<tr>
-
-</tr>
 
