--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/FacturacionGlobal.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/FacturacionGlobal.cshtml
@@ -20,23 +20,10 @@
             $(window).on("load", showNotification(tipo, mensaje, 'top', 'center', '', ''));
         }
     </script>
-    <script>
-        $(document).ready(function () {
-            $("#ok").click(function () {
-                var valores = "";
-                $(".numero").parent("tr").find("td").each(function () {
-                    if ($(this).html() != "coger valores de la fila") {
-                        valores += $(this).html() + " ";
-                    }
-                });
-                valores = valores + "\n";
-                alert(valores);
-            });
-        });
-    </script>
+
 </head>
 <body>
-    @using (Html.BeginForm())
+    @using (Html.BeginForm("AgregarTikets", "Cobranza", FormMethod.Post))
     {
         <section class="content home">
             <div class="container-fluid">
@@ -103,50 +90,46 @@
                                 </div>
                                 <div class="col-md-2">
                                     <div class="form-group">
-                                        <strong>Número de Cliente:*</strong>
+                                        <strong>N° de Cliente:*</strong>
                                         @Html.TextBoxFor(m => m.IdCliente, new { @class = "form-control", @placeholder = "Número de Cliente" })
                                         @Html.ValidationMessageFor(m => m.IdCliente, "", new { @class = "alert-danger" })
                                     </div>
                                 </div>
                                 <div class="col-md-2" style="top:10px">
-                                    <input type="submit" name="Buscar" value="Buscar" class="btn btn-raised btn-primary btn-round float-left" />
+                                    <button id="btnUpDate" formaction=@Url.Action("BuscarTikets") class="btn btn-primary btn-icon-mini btn-round">
+                                        Buscar
+                                    </button>
                                 </div>
                                 <div class="col-md-2" style="top:10px">
-                                    <button id="btnUpDate" formaction=@Url.Action("Agregar") class="btn btn-primary btn-icon-mini btn-round">
-                                        Agregar
-                                    </button>
+                                    <input type="submit" value="Agregar" class="btn btn-raised btn-primary btn-round float-left" />
                                 </div>
                             </div>
                             <br />
-                            <div class="row clearfix blockquote blockquote-info btn-round">
-                                <div class="table-responsive">
-                                    <table class="table table-striped table-hover">
-                                        <thead>
-                                            <tr>
-                                                <th>Ticket</th>
-                                                <th>Importe</th>nts
-                                                <th>RFC</th>
-                                                <th>Seleccionar</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            @Html.EditorFor(x => x.Tickets)
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="header"><strong>Factura Global</strong></div>
-                        <div class="body">
                             <div class="row clearfix">
-                                <div class="row clearfix blockquote blockquote-info btn-round">
-                                    <div class="table-responsive">
+                                <div class="col-md-12">
+                                    <div class="table-responsive blockquote blockquote-info btn-round">
                                         <table class="table table-striped table-hover">
                                             <thead>
                                                 <tr>
-                                                    <th><strong>#</strong></th>
+                                                    <th>Ticket</th>
+                                                    <th>Importe</th>
+                                                    <th>RFC</th>
+                                                    <th>Seleccionar</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                @Html.EditorFor(x => x.Tickets)
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row clearfix">
+                                <div class="col-md-12">
+                                    <div class="table-responsive blockquote blockquote-info btn-round">
+                                        <table id="tbl_Agregados" class="table table-striped table-hover">
+                                            <thead>
+                                                <tr>
                                                     <th><strong>Ticket</strong></th>
                                                     <th><strong>RFC</strong></th>
                                                     <th><strong>Importe</strong></th>
@@ -154,21 +137,20 @@
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                                @if (TempData["TiketsAgregados"] != null)
+                                                @if (ViewBag.TiketsAgregados != null)
                                                 {
-                                                    foreach (var item in ViewBag.CFDIs)
+                                                    foreach (var item in ViewBag.TiketsAgregados)
                                                     {
                                                         <tr>
-                                                            <th></th>
-                                                            <th>@item.FolioVenta</th>
-                                                            <th>@item.RFC</th>
-                                                            <th class="importe">@item.VentaTotal</th>
-                                                            <th>
-                                                                <a href="@Url.Action(" Borrar", "Requisicion" , new { id=@item.FolioVenta })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                                            <td>@item.FolioVenta</td>
+                                                            <td>@item.RFC</td>
+                                                            <td class="importe">@item.Total</td>
+                                                            <td>
+                                                                <a href="@Url.Action("BorrarTicket", "Cobranza" , new { Folio=@item.FolioVenta })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
                                                                     <i class="material-icons">delete</i>
                                                                     <span>Eliminar</span>
                                                                 </a>
-                                                            </th>
+                                                            </td>
                                                         </tr>
                                                     }
                                                 }
@@ -177,29 +159,41 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row clearfix">
-                                <strong>Total de Factura Global</strong>
-                            </div>
-                            <div class="row clearfix">
-                                <div class="col-md-3">
-                                    <input type="submit" name="Facturar" value="Facturar" class="btn btn-raised btn-primary btn-round float-left" />
+
+                            <div class="col-md-12">
+                                <div class="row clearfix">
+                                    <strong>Total de Factura Global</strong>
                                 </div>
-                                <div class="col-md-3">
-                                    <div class="form-control">
-                                        <strong>SubTotal:</strong>
-                                        $ @Html.Label("lblSubTotal", "0.00", new { @class = "text-muted" });
+                                <div class="row clearfix">
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <strong> </strong>
+                                            <input type="submit" name="Facturar" value="Facturar" class="btn btn-raised btn-primary btn-round float-left" />
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="form-control">
-                                        <strong>IVA(16%):</strong>
-                                        $ @Html.Label("lblIVA", "0.00", new { @class = "text-muted" });
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <strong>SubTotal:</strong>
+                                            <div>
+                                                $ @Html.Label("subTotal", "0.00", new { @class = "text-muted", id = "lblSubTotal" })
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="form-control">
-                                        <strong>Total:</strong>
-                                        $ @Html.Label("lblTotal", "0.00", new { @class = "text-muted" });
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <strong>IVA(16%):</strong>
+                                            <div>
+                                                $ @Html.Label("iva", "0.00", new { @class = "text-muted", id = "lblIVA" })
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <strong>Total:</strong>
+                                            <div>
+                                                $ @Html.Label("total", "0.00", new { @class = "text-muted", id = "lblTotal" })
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -253,3 +247,17 @@
     }
 </body>
 </html>
+<script>
+    var subT = 0;
+    var total = 0;
+    var iva = 0;
+    $(".importe").each(function () {
+        subT += parseFloat($(this).html()) || 0;
+        iva += ((parseFloat($(this).html()) || 0) * 0.16)
+        total += (((parseFloat($(this).html()) || 0) * 0.16) + (parseFloat($(this).html()) || 0));
+    });
+
+    $("#lblSubTotal").text(subT);
+    $("#lblIVA").text(iva.toFixed(2));
+    $("#lblTotal").text(total.toFixed(2));
+</script>
