JSA - Facturacion Global

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/FacturacionGlobal.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/FacturacionGlobal.cshtml
@@ -168,7 +168,9 @@
                                     <div class="col-md-3">
                                         <div class="form-group">
                                             <strong> </strong>
-                                            <input type="submit" name="Facturar" value="Facturar" class="btn btn-raised btn-primary btn-round float-left" />
+                                            <button id="btnFacturar" formaction=@Url.Action("Facturar") class="btn btn-primary btn-icon-mini btn-round">
+                                                Facturar
+                                            </button>
                                         </div>
                                     </div>
                                     <div class="col-md-3">
