--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Historico/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Historico/Index.cshtml
@@ -14,7 +14,13 @@
         )
 <script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
 <script src="~/assets/js/pages/ui/notifications.js"></script>
+
 <script type="text/javascript">
+    var mensaje = '@ViewBag.Msj';
+    var tipo = '@ViewBag.Tipo';
+    if (mensaje != '') {
+        $(window).on("load", showNotification(tipo, mensaje, 'top', 'center', '', ''));
+    }
     //$(document).ready(function () {
 
     //    $("#idUrl").change(function (event) {
@@ -32,6 +38,7 @@
     //});
 
 </script>
+
 <body>
     <section class="content home">
         <div class="container-fluid">
@@ -51,37 +58,31 @@
                     </div>
                     <div class="card">
                         <div class="header">
-                            <strong>Mantenimiento</strong>
+                            <strong>Selección</strong> de archivo
                         </div>
                         <div class="body">
                             <div class="row clearfix">
                                 <div class="col-md-5">
+                                    <strong>Archivo a Cargar:</strong>
                                     <div class="form-group">
-                                        <b>Archivo a Cargar:</b>
-                                        @Html.TextBoxFor(m => m.Url, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(m => m.Url, "", new { @class = "alert-danger" })
+                                        <input type="file" id="dataFile" value="Pre-Cargar" name="preCarga" />
                                     </div>
+                                    @Html.ValidationMessageFor(m => m.Url, "", new { @class = "alert-danger" })
+                                </div>
+                                <div class="col-md-5">
+                                    <strong> &nbsp; </strong>
+                                    <div class="form-group">
+                                        <input type="submit" value="Pre-Cargar" formaction=@Url.Action("PreCarga") class="btn btn-default btn btn-primary btn-round" />
+                                    </div>
+                                
                                 </div>
 
                                 <div class="col-md-2">
+                                    <strong> &nbsp; </strong>
                                     <div class="form-group">
-
-                                        @*<label class="btn btn-default btn btn-primary btn-round">
-                                                Seleccionar Ruta <input type="file" id="idUrl" >
-                                            </label>*@
-                                        <input type="file" id="dataFile" name="upload" />
-                                        <input type="submit" value="Upload" class="btn btn-primary btn-round" />
-
+                                        <input type="submit" value="Subir" class="btn btn-primary btn-round" />
                                     </div>
                                 </div>
-                                <div class="col-md-2">
-                                    <div class="form-group">
-                                        <input type="file" id="dataFile" name="preCarga" />
-                                        <input type="submit" value="Pre-Cargar" formaction=@Url.Action("PreCarga") class="btn btn-primary btn-round" />
-                                    </div>
-                                </div>
-
-
                             </div>
 
                             @if (ViewBag.MensajeError != null)
@@ -169,16 +170,16 @@
                                 </div>
                             </div>
                             @*@if (ViewBag.HistoricoVentas != null)
-                            {
-                                <div class="row clearfix">
-                                    <div class="col-md-6">
-                                        Página @(ViewBag.HistoricoVentas.PageCount < ViewBag.HistoricoVentas.PageNumber ? 0 : ViewBag.HistoricoVentas.PageNumber) de @ViewBag.HistoricoVentas.PageCount
+                                {
+                                    <div class="row clearfix">
+                                        <div class="col-md-6">
+                                            Página @(ViewBag.HistoricoVentas.PageCount < ViewBag.HistoricoVentas.PageNumber ? 0 : ViewBag.HistoricoVentas.PageNumber) de @ViewBag.HistoricoVentas.PageCount
+                                        </div>
+                                        <div class="col-md-6 text-right">
+                                            @Html.PagedListPager((IPagedList)ViewBag.HistoricoVentas, page => Url.Action("Index", new { page, @class = "btn btn-primary btn-simple" }))
+                                        </div>
                                     </div>
-                                    <div class="col-md-6 text-right">
-                                        @Html.PagedListPager((IPagedList)ViewBag.HistoricoVentas, page => Url.Action("Index", new { page, @class = "btn btn-primary btn-simple" }))
-                                    </div>
-                                </div>
-                            }*@
+                                }*@
 
                         </div>
                     </div>
