--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Historico/HistoricoVentas.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Historico/HistoricoVentas.cshtml
@@ -30,9 +30,9 @@
                         <div class="col-lg-5 col-md-5 col-sm-12">
                             <h2>Histórico de ventas</h2>
                             <ul class="breadcrumb padding-0">
-                                <li class="breadcrumb-item"><a href="~/DashBoard/Vista/Dashboard.aspx"><i class="zmdi zmdi-home"></i></a></li>
-                                <li class="breadcrumb-item">Equipo de Transporte</li>
-                                <li class="breadcrumb-item">Histórico de ventas</li>
+                                <li class="breadcrumb-item"><a href="~/DashBoard/Vista/Dashboard.aspx"><i class="zmdi zmdi-home"></i></a></li>    
+                                <li class="breadcrumb-item">Histórico</li>
+                                <li class="breadcrumb-item">Historioc de ventas</li>
                             </ul>
                         </div>
                     </div>
