--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/EquipoTransporte/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/EquipoTransporte/Index.cshtml
@@ -38,8 +38,8 @@
     @using (Html.BeginForm("Alta", "EquipoTransporte", FormMethod.Post))
     {
         @Html.HiddenFor(m => m.IdEmpresa)
-        @Html.HiddenFor(m => m.IdEquipoTransporte)
-    
+        @Html.HiddenFor(m => m.IdEquipoTransporteDetalle)
+        @Html.HiddenFor(m => m.IdEquipoTransporte)    
         @Html.HiddenFor(m => m.IdVehiculoUtilitario)
         @Html.HiddenFor(m => m.IdCamioneta)
         @Html.HiddenFor(m => m.IdPipa)
@@ -338,18 +338,18 @@
                                                     foreach (var item in ViewBag.Vehiculos)
                                                     {
                                                         <tr>
-                                                            <th>@item.IdEquipoTransporte</th>
+                                                            <th>@item.IdEquipoTransporteDetalle</th>
                                                             <th>@item.Placas</th>
                                                             <td>@item.AliasUnidad</td>
                                                             <td>@item.Descripcion</td>
                                                             <td>
-                                                                <a ID="lbEdit" href="@Url.Action("EditarVehiculo", "EquipoTransporte", new { id = item })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                                                <a ID="lbEdit" href="@Url.Action("EditarVehiculo", "EquipoTransporte", new { id = item.IdEquipoTransporteDetalle })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
                                                                     <i class="material-icons">edit</i>
                                                                     <span>Editar vehículo</span>
                                                                 </a>
                                                                 @if (ViewBag.EsAdmin)
                                                                 {
-                                                                    <a href="#ModalConfirmacion" data-toggle="modal" data-id="@item.IdEquipoTransporte" id="btnok" class="tip" onclick="javascript: AsignarEliminar(@item.IdEquipoTransporte)" data-target="#ModalConfirmacion" role="button" aria-haspopup="true" aria-expanded="false">
+                                                                    <a href="#ModalConfirmacion" data-toggle="modal" data-id="@item.IdEquipoTransporteDetalle" id="btnok" class="tip" onclick="javascript: AsignarEliminar(@item.IdEquipoTransporteDetalle)" data-target="#ModalConfirmacion" role="button" aria-haspopup="true" aria-expanded="false">
                                                                         <i class="material-icons">delete</i>
                                                                         <span>Eliminar vehículo</span>
                                                                     </a>
