JSA - Avance reportes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -165,6 +165,7 @@
                                 <li>@Html.ActionLink("Cuenta Contable", "CuentaContable", "CuentaContable")</li>
                                 <li>@Html.ActionLink("Proveedor", "Proveedores", "Producto")</li>
                                 <li>@Html.ActionLink("Gaseras", "Index", "Empresas")</li>
+                                <li>@Html.ActionLink("Egresos", "Index", "Egreso")</li>
                                 <li>@Html.ActionLink("Usuarios", "Index", "Usuarios")</li>
                                 <li>@Html.ActionLink("Roles", "Index", "Roles")</li>
                                 <li>@Html.ActionLink("Clientes", "Index", "Clientes")</li>
