JSA Avance Reportes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/CuentasXPagar.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/CuentasXPagar.cshtml
@@ -1,17 +1,86 @@
-﻿
-@{
-    ViewBag.Title = "Cuentas por pagar";
-}
+﻿@model MVC.Presentacion.Models.CuentasPorPagarModel
+@Html.DevExpress().GetStyleSheets(
+        new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Material" },
+        new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Material" },
+        new StyleSheet { ExtensionSuite = ExtensionSuite.GridView, Theme = "Material" },
+        new StyleSheet { ExtensionSuite = ExtensionSuite.GridView, Theme = "Material" }
+    )
+@Html.DevExpress().GetScripts(
+        new Script { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
+        new Script { ExtensionSuite = ExtensionSuite.Editors },
+        new Script { ExtensionSuite = ExtensionSuite.GridView }
+    )
+<script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
+<script src="~/assets/js/pages/ui/notifications.js"></script>
+<script type="text/javascript">
+    var mensaje = '@ViewBag.Msj';
+    if (mensaje != '') {
+        $(window).on("load", showNotification('alert-success', mensaje, 'top', 'center', '', ''));
+    }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>CuentasXPagar</title>
-</head>
+</script>
 <body>
-    <div> 
+    <div class="page-loader-wrapper">
+        <div class="loader">
+            <div class="m-t-30"><img src="~/assets/images/LogoCorpKonsilio183x183.png" width="48" height="48" alt="Alpino"></div>
+            <p>Espere por favor</p>
+        </div>
     </div>
+    <section class="content home">
+        <div class="container-fluid">
+            @using (Html.BeginForm("CuentasXPagar", "Reportes", FormMethod.Post))
+            {
+                <div class="block-header">
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12">
+                            <h2>Proveedores</h2>
+                            <ul class="breadcrumb padding-0">
+                                <li class="breadcrumb-item"><a href="index.html"><i class="zmdi zmdi-home"></i></a></li>
+                                <li class="breadcrumb-item">Reportes</li>
+                                <li class="breadcrumb-item">Cuentas Por Pagar</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="row clearfix">
+                    <div class="card">
+                        @*<div class="header">
+                                <h2><strong>&ensp;</strong></h2>
+                            </div>*@
+                        <div class="body">
+                            <div class="row clearfix">
+                                <div class="col-md-3">
+                                    <strong>Periodo</strong>
+                                    <div class="form-group">
+                                        @Html.DevExpress().DateEdit(settings =>
+                                      {
+                                          settings.Name = "Periodo";
+                                          settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                          settings.Properties.PickerType = DatePickerType.Months;
+                                          settings.Properties.CalendarProperties.FastNavProperties.InitialView = DatePickerType.Years;
+                                          settings.Properties.CalendarProperties.FastNavProperties.MaxView = DatePickerType.Years;
+                                          settings.Date = DateTime.Today;
+                                      }).Bind(Model.Periodo).GetHtml()
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <strong>&emsp;</strong>
+                                    <div class="form-group">
+                                        <input type="submit" value="Crear reporte" class="btn btn-default btn-round" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row clearfix">
+                                <div class="row clearfix blockquote blockquote-info btn-round">
+                                    <div class="table-responsive">
+                                        @Html.Partial("_CuentasPorPagarPartial")
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </section>
 </body>
-</html>
