--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -83,10 +83,10 @@
                     @if (Session["Perfil"] != null)
                     {
                         <li class="menu_dark"><a href="@Url.Action("Inicio", "Home")"><i class="material-icons">dashboard</i> <span class="icon-name">Dashboard</span></a></li>
-                         <li>
+                        <li>
                             <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">layers</i><span>Facturación</span> </a>
                             <ul class="ml-menu">
-                                <li>@Html.ActionLink("Autoservicio", "Index", "Facturacion")</li>                                
+                                <li>@Html.ActionLink("Autoservicio", "Index", "Facturacion")</li>
                             </ul>
                         </li>
                         <li class="menu_dark"><a href="@Url.Action("Requisiciones", "Requisicion")"><i class="material-icons">feedback </i><span class="icon-name">Requisición</span> </a></li>
@@ -100,7 +100,7 @@
                             </ul>
                         </li>
                         <li class="menu_dark"><a href="@Url.Action("Index", "Pedidos")"><i class="material-icons"> phone </i><span class="icon-name">Call Center</span> </a></li>
-                        
+
                         @*<li class="menu_dark"> @Html.ActionLink("Call Center","Index", "Pedidos")</li>*@
                         <li>
                             <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">drive_eta</i><span>Equipo de Transporte</span> </a>
@@ -138,9 +138,9 @@
                         </li>
                         <li>
                             <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">receipt</i><span>Historico Ventas</span> </a>
-                            <ul class="ml-menu">                       
+                            <ul class="ml-menu">
                                 <li>@Html.ActionLink("Carga Informacion", "Index", "Historico")</li>
-                                <li>@Html.ActionLink("Historico Ventas", "HistoricoVentas", "Historico")</li>                             
+                                <li>@Html.ActionLink("Historico Ventas", "HistoricoVentas", "Historico")</li>
                             </ul>
                         </li>
                         @*<li>
@@ -175,6 +175,12 @@
                                 <li>@Html.ActionLink("Precio de venta Otros", "Index", "PrecioVentaOtro")</li>
                             </ul>
                         </li>
+                        <li>
+                            <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-grid"></i><span>Reportes</span></a>
+                            <ul class="ml-menu">
+                                <li>@Html.ActionLink("Cuentas por pagar", "CuentasXPagar", "Reportes")</li>
+                            </ul>
+                        </li>
                     }
                 </ul>
             </div>
@@ -190,7 +196,7 @@
 <script src="~/assets/plugins/jquery-inputmask/jquery.inputmask.bundle.js"></script>
 <script src="~/assets/plugins/momentjs/moment.js"></script>
 <script src="~/assets/bundles/mainscripts.bundle.js"></script>
-<script src="~/assets/bundles/morrisscripts.bundle.js"></script> 
+<script src="~/assets/bundles/morrisscripts.bundle.js"></script>
 <script src="~/assets/js/pages/charts/morris.js"></script>
 
 @Styles.Render("~/Content/css")
