--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/CuentasXPagar.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/CuentasXPagar.cshtml
@@ -1,4 +1,5 @@
-﻿@model MVC.Presentacion.Models.CuentasPorPagarModel
+﻿@model CuentasPorPagarModel
+@using MVC.Presentacion.Models;
 @Html.DevExpress().GetStyleSheets(
         new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Material" },
         new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Material" },
@@ -31,7 +32,7 @@
             @using (Html.BeginForm("CuentasXPagar", "Reportes", FormMethod.Post))
             {
                 <div class="block-header">
-                    <div class="row">
+                    <div class="row clearfix">
                         <div class="col-lg-12 col-md-12 col-sm-12">
                             <h2>Proveedores</h2>
                             <ul class="breadcrumb padding-0">
@@ -41,12 +42,7 @@
                             </ul>
                         </div>
                     </div>
-                </div>
-                <div class="row clearfix">
                     <div class="card">
-                        @*<div class="header">
-                                <h2><strong>&ensp;</strong></h2>
-                            </div>*@
                         <div class="body">
                             <div class="row clearfix">
                                 <div class="col-md-3">
@@ -71,9 +67,16 @@
                                 </div>
                             </div>
                             <div class="row clearfix">
-                                <div class="row clearfix blockquote blockquote-info btn-round">
+                                <div class="blockquote blockquote-info btn-round">
                                     <div class="table-responsive">
-                                        @Html.Partial("_CuentasPorPagarPartial")
+                                        @if (ViewData["DataSource"] != null)
+                                        {
+                                            @Html.Partial("_CuboDeInformacionPartial", (List<CuentasPorPagarDTO>)ViewData["DataSource"])
+                                        }
+                                        else
+                                        {
+                                            @Html.Partial("_CuboDeInformacionPartial", new List<CuentasPorPagarDTO>())
+                                        }
                                     </div>
                                 </div>
                             </div>
