--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -179,6 +179,7 @@
                             <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-grid"></i><span>Reportes</span></a>
                             <ul class="ml-menu">
                                 <li>@Html.ActionLink("Cuentas por pagar", "CuentasXPagar", "Reportes")</li>
+                                <li>@Html.ActionLink("Inv. por punto de venta ", "InventarioXPuntoVenta", "Reportes")</li>
                             </ul>
                         </li>
                     }
