--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/InventarioXPuntoVenta.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/InventarioXPuntoVenta.cshtml
@@ -1,5 +1,5 @@
 ﻿@using MVC.Presentacion.Models;
-@model CuentasPorPagarModel
+@model  InventarioPorPuntoVentaModel
 @Html.DevExpress().GetStyleSheets(
         new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Material" },
         new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Material" },
@@ -29,7 +29,7 @@
     </div>
     <section class="content home">
         <div class="container-fluid">
-            @using (Html.BeginForm("CuentasXPagar", "Reportes", FormMethod.Post))
+            @using (Html.BeginForm("InventarioXPuntoVenta", "Reportes", FormMethod.Post))
             {
                 <div class="block-header">
                     <div class="row clearfix">
@@ -38,7 +38,7 @@
                             <ul class="breadcrumb padding-0">
                                 <li class="breadcrumb-item"><a href="index.html"><i class="zmdi zmdi-home"></i></a></li>
                                 <li class="breadcrumb-item">Reportes</li>
-                                <li class="breadcrumb-item">Cuentas Por Pagar</li>
+                                <li class="breadcrumb-item">Inventario por Punto de Venta</li>
                             </ul>
                         </div>
                     </div>
@@ -46,17 +46,33 @@
                         <div class="body">
                             <div class="row clearfix">
                                 <div class="col-md-3">
-                                    <strong>Periodo</strong>
+                                    <strong>Al dia</strong>
                                     <div class="form-group">
                                         @Html.DevExpress().DateEdit(settings =>
-                                      {
-                                          settings.Name = "Periodo";
-                                          settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                          settings.Properties.PickerType = DatePickerType.Months;
-                                          settings.Properties.CalendarProperties.FastNavProperties.InitialView = DatePickerType.Years;
-                                          settings.Properties.CalendarProperties.FastNavProperties.MaxView = DatePickerType.Years;
-                                          settings.Date = DateTime.Today;
-                                      }).Bind(Model.Periodo).GetHtml()
+                                   {
+                                       settings.Name = "Fecha";
+                                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                       //settings.Properties.PickerType = DatePickerType.Months;
+                                       settings.Properties.CalendarProperties.FastNavProperties.InitialView = DatePickerType.Years;
+                                       settings.Properties.CalendarProperties.FastNavProperties.MaxView = DatePickerType.Years;
+                                       settings.Date = DateTime.Today;
+                                   }).Bind(Model.Fecha).GetHtml()
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <strong>Estaciones</strong>
+                                    <div class="form-group">
+                                        <ul>
+                                            @Html.EditorFor(m => m.Pipas)
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <strong>Estaciones</strong>
+                                    <div class="form-group">
+                                        <ul>
+                                            @Html.EditorFor(m => m.Estaciones)
+                                        </ul>
                                     </div>
                                 </div>
                                 <div class="col-md-3">
@@ -71,11 +87,11 @@
                                     <div class="table-responsive">
                                         @if (ViewData["DataSource"] != null)
                                         {
-                                            @Html.Partial("_CuboDeInformacionPartial", (List<CuentasPorPagarDTO>)ViewData["DataSource"])
+                                            @Html.Partial("_CuboDeInformacionPartial", (List<InventarioPorPuntoVentaDTO>)ViewData["DataSource"])
                                         }
                                         else
                                         {
-                                            @Html.Partial("_CuboDeInformacionPartial")
+                                            @Html.Partial("_CuboDeInformacionPartial", new List<InventarioPorPuntoVentaDTO>())
                                         }
                                     </div>
                                 </div>
